--- a/Index.html
+++ b/Index.html
@@ -10,54 +10,42 @@
 
         <!--link to css file named style.css and js-file named style.js-->
         <link href="css/style.css" rel="stylesheet" />
-        <script src="js/style.js" type="text/javascript"></script>
+        <script src="js/style2.js" type="text/javascript"></script>
     </head>
 
     <div>
         <div class="container">
             <div class="calc-input">
-                <p name="user-input" id="user-input">0</p>
+                <p name="userInput" id="userInput">0</p>
             </div>
 
             <div class="calc-keys" id="calc-keys">
 
-                <!--klammer buttons-->
-                <button type="button" class="btn topRow">(</button>
-                <button type="button" class="btn topRow">)</button>
-                <!--divs als platzhalter-->
-                <div class="btn topRow"></div>
-                <div class="btn topRow"></div>
-                <div class="btn topRow"></div>
-
                 <!--numbers and operation buttons-->
+                <button type="button" class="btn DEL">DEL</button>
+                <button type="button" class="btn AC">AC</button>
+                <button type="button" class="btn btnOpFac">(x)!</button>
+                <button type="button" class="btn btnOpSqr">(x)^2</button>
+
                 <button type="button" class="btn numbers">7</button>
                 <button type="button" class="btn numbers">8</button>
                 <button type="button" class="btn numbers">9</button>
-                <button type="button" class="btn operations">+</button>
-                <button type="button" class="btn operations">-</button>
+                <button type="button" class="btn btnOperations">+</button>
 
                 <button type="button" class="btn numbers">4</button>
                 <button type="button" class="btn numbers">5</button>
                 <button type="button" class="btn numbers">6</button>
-                <button type="button" class="btn operations">*</button>
-                <button type="button" class="btn operations">/</button>
+                <button type="button" class="btn btnOperations">-</button>
 
                 <button type="button" class="btn numbers">1</button>
                 <button type="button" class="btn numbers">2</button>
                 <button type="button" class="btn numbers">3</button>
-                <button type="button" class="btn operations">!</button>
-                <button type="button" class="btn operations">^</button>
+                <button type="button" class="btn btnOperations">*</button>
 
-                <button type="button" class="btn operations">,</button>
+                <button type="button" class="btn btnOperations">.</button>
                 <button type="button" class="btn numbers">0</button>
                 <button type="button" class="btn equal">=</button>
-                <button type="button" class="btn DEL">DEL</button>
-                <button type="button" class="btn AC">AC</button>
-
-
-
-
-
+                <button type="button" class="btn btnOperations">/</button>
 
             </div>
         </div>
